# Computer_Organization

./: README.md
CS61C-Tests-master/: README.md
CS61C-Tests-master/proj2/: Makefile  test1.c
CS61C-Tests-master/proj2/mipscode/: test-disasm.cmp  test-disasm.s  tests.s
week1/: disc01.txt  hw01.txt
week1/01/: CMakeLists.txt  eccentric  eccentric.c  hello  hello.c  ll_cycle.c  ll_equal
week11/09/: sseTest.s  sum  sum.c
week12/10/: dotp  dotp.c  hello  v_add  v_add.c
week13/11/: DocWordCount.java  Makefile  pg5827.txt
week13/11/convertedOut/: .pg5827.txt.seq.crc  pg5827.txt.seq
week13/11/doc-out-wordcount-small/: .part-r-00000.crc  part-r-00000
week13/11/wc-out-wordcount-small/: .part-r-00000.crc  part-r-00000
week13/fa17-proj3-starter-master/: .gitignore
week13/fa17-proj3-starter-master/performance/: matrix.c  matrix.h
week13/fa17-proj3-starter-master/testing/: speedup.py
week3/02/: CMakeLists.txt  bit_ops  bit_ops.c  lfsr  lfsr.c  vector-test  vector-test.c  vector.c
week3/hw1/: CMakeLists.txt  Makefile  beargit.c  init_test
week4/: CMakeLists.txt
week4/03/: lab3_ex1.s  lab3_ex2.s  lab3_ex3.s
week4/hw1/: Makefile  TEST_STDERR  beargit-unittest  beargit.c  cunittests.c  init_test  tes
week5/04/: CMakeLists.txt  first1pos.s  listmanips.s  nchoosek.s
week5/proj1_starter-master/: ALL_TEST  CMakeLists.txt  Test_combined  Test_comments  Test_imm  Test_labels  Test_p1_errors  Test_pseudo  Test_simple  assembler.c  blue.txt  gold.txt  p2_errors.txt  pearl.txt  red.txt  ruby.txt  silver.txt  test_addu.txt  test_assembler.c  test_output.txt
week5/proj1_starter-master/src/: tables.c  tables.h  translate.c  translate.h  translate_utils.c  utils.h
week6/lab5/: FSM.circ  and.circ  lab5.circ
week6/proj1_starter-proj1-2/: CMakeLists.txt  Test_link  assembler.c  linker
week6/proj1_starter-proj1-2/linker-src/: linker.s  linker_utils.s  parsetools.s  string.s  symbol_list.s
week6/proj1_starter-proj1-2/linker-tests/: test_linker_utils.s  test_parsetools.s  test_symbol_list.s
week6/proj1_starter-proj1-2/src/: tables.c  translate.c
week7/06/: lab6ALU.circ  part1.circ
week8/lab7/: fib.circ  lab7.circ  pipeline.circ
week8/pro2/proj2_starter-master/: .~lock.isa.ods#  cpu.circ  isa.ods
week8/pro2/proj2_starter-master/mipscode/: tests.trace
week8/proj2_starter-master/: .~lock.isa.ods#  Makefile  cpu.circ  isa.ods  mem.circ  memdata  run.circ  test lw  test1.c
week8/proj2_starter-master/test-files/: alu.circ  cpu.circ  lfsrpalindrome.hex  regfile.circ
week8/proj2_starter-master/test-files/assem/: lfsrpalindrome.s
week8/proj2_starter-master/test-files/hex/: lfsrpalindrome.hex
week9/08/: cache.s  matrixMultiply  transpose  transpose.c  wackycache.s
